# crypto-com-api

./: .gitignore  Cargo.toml  README.md
src/: api_request.rs  api_response.rs  controller.rs  error.rs  lib.rs  prelude.rs
src/rest/: mod.rs  private.rs  public.rs
src/rest/data/: account_summary.rs  book.rs  candlestick.rs  create_withdrawal.rs  currency_networks.rs  deposit_address.rs  deposit_history.rs  instruments.rs  mod.rs  ticker.rs  trades.rs  withdrawal_history.rs
src/utils/: action.rs  config.rs  mod.rs
src/websocket/: market_api.rs  mod.rs  user_api.rs
src/websocket/actions/: mod.rs  spot_trading_api.rs  wallet_management_api.rs
src/websocket/data/: account_summary.rs  book.rs  cancel_order_list.rs  candlestick.rs  create_order.rs  create_order_list.rs  create_withdrawal.rs  get_trades.rs  mod.rs  open_orders.rs  order_detail.rs  order_history.rs  otc_book.rs  ticker.rs  trade.rs  user_balance.rs  user_order.rs  user_trade.rs  withdrawal_history.rs
tests/: rest_public.rs  websocket_authorized_actions.rs  websocket_basic.rs
