[package]
name = "crypto-com-api"
version = "0.1.0"
authors = ["Jvne"]
edition = "2021"
description = "Crypto.com API library"
readme = "README.md"
repository = "https://github.com/ProfessorChill/"
license = "MIT OR Apache-2.0"
keywords = ["api", "exchange"]
categories = ["api-bindings"]

[features]
default = ["rest", "websocket"]
rest = []
websocket = []
# I don't know how to make conditional tests.
# Use this test if your .env has a real API_KEY and SECRET_KEY,
# it cannot run these tests without real keys.
test_authorized = []

[dependencies]
anyhow = "1"
futures-util = "0.3"
futures-channel = "0.3"
hex = "0.4"
hmac = "0.12"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }
url = "2.4"

[dev-dependencies]
crypto-com-api = { path = ".", features = ["default", "test_authorized"] }
tokio = { version = "1", features = ["macros"] }
dotenv = "0.15"
env_logger = "0.10"
